--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class='row'>
-            <div class='col-8 offset-2'>
+            <div class='col-8 offset-2 text-center'>
                 {{ links }}
             </div>
         </div>
