--- a/templates/index.css
+++ b/templates/index.css
@@ -1,15 +1,19 @@
-h2{
+#app h2 {
     font-size: 1rem
 }
-
-.list-group-item{
+#app .list-group-item {
     margin: .3rem 0
 }
-
-.btn.btn-light{
+#app .btn.btn-light {
     background-color: #e0e9f3
 }
-
-.input-group > .input-group-append > .btn {
+#app .input-group > .input-group-append > .btn {
     border-radius: 3px
+}
+
+#presentation {
+    background: cornsilk;
+}
+#presentation .list-group-item {
+    margin: .3rem 0
 }
