--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -1,6 +1,6 @@
-<body>
+<body id="presentation">
 
-    <div class='container'>
+    <div  class='container'>
 
         <div class='row'>
             <div class='col-8 offset-2'>
