--- a/templates/index.css
+++ b/templates/index.css
@@ -1,19 +1,1 @@
-#app h2 {
-    font-size: 1rem
-}
-#app .list-group-item {
-    margin: .3rem 0
-}
-#app .btn.btn-light {
-    background-color: #e0e9f3
-}
-#app .input-group > .input-group-append > .btn {
-    border-radius: 3px
-}
-
-#presentation {
-    background: cornsilk;
-}
-#presentation .list-group-item {
-    margin: .3rem 0
-}
+#app h2{font-size: 1rem}#app .list-group-item{margin: .3rem 0}#app .btn.btn-light{background-color: #e0e9f3}#app .input-group > .input-group-append > .btn{border-radius: 3px}#presentation{background: cornsilk;}#presentation .list-group-item{margin: .3rem 0}
